AI augmented UI improvement